Resolve UpdateChecker deprecation