@@ -8,7 +8,7 @@ import org.bukkit.event.player.PlayerJoinEvent;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.Scanner;
 
 public class UpdateChecker {
@@ -23,13 +23,17 @@ public class UpdateChecker {
     }
 
     public String getVersion() {
-        try (final Scanner scanner = new Scanner(new URL("https://api.spigotmc.org/simple/0.1/index.php?action=getResource&id=" + resourceID).openStream())) {
-            return ((JSONObject) new JSONParser().parse(scanner.nextLine())).get("current_version").toString();
-        } catch (Exception ignored) {
+        try {
+            URI uri = new URI("https://api.spigotmc.org/simple/0.1/index.php?action=getResource&id=" + resourceID);
+            try (final Scanner scanner = new Scanner(uri.toURL().openStream())) {
+                String response = scanner.nextLine();
+                JSONObject jsonObject = (JSONObject) new JSONParser().parse(response);
+                return jsonObject.get("current_version").toString();
+            }
+        } catch (Exception exception) {
             EvenMoreFish.getInstance().getLogger().warning("EvenMoreFish failed to check for updates against the spigot website, to check manually go to https://www.spigotmc.org/resources/evenmorefish.91310/updates");
             return plugin.getDescription().getVersion();
         }
-
     }
 }
 
